2012-11-29 Romain Francois <romain@r-enthusiasts.com>

        * unitTests/runit.DataFrame.R: using sourceCpp
        * include/Rcpp/vector/Matrix.h: fix yet another const correctness issue

2012-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/iostream/Rostream.h: Check before deleting buf

2012-11-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.1
        * inst/NEWS.Rd: Release 0.10.1
        * inst/include/Rcpp/config.h: Release 0.10.1
        * debian/*: Similarly updated for new release to Debian

	* DESCRIPTION: Added paragraph about Rcpp attributes
	* debian/control: Idem

2012-11-26 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: comment out the unused and unuseable
	converter overload.
        * include/Rcpp/sugar/functions/pmin.h: be consistent about how the
	pmin_op helper struct is defined (always a struct).
        * include/Rcpp/sugar/functions/pmax.h: same for pmax
        * include/Rcpp/stats/random/rbeta.h: fixed constructor issue
        * unitTests/runit.sugar.R: rework to use sourceCpp instead of inline
        * include/Rcpp/vector/Vector.h: added ctor to deal with
        SingleLogicalResult
        * include/Rcpp/vector/Matrix.h: another const correctness fix

2012-11-25  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use echo = TRUE for sourceCpp R code chunks
        * src/Module.cpp: BEGIN_RCPP/END_RCPP in InternalFunction_invoke
        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: add documentation
        on correct semantics for signaling error conditions

2012-11-24  JJ Allaire <jj@rstudio.org>

        * inst/doc/Rcpp-attributes/Rcpp-attributes.Rnw: expand discussion
        of binary compatibility issues.

2012-11-23 Romain Francois <romain@r-enthusiasts.com>

        * src/AttributesParser.cpp : attempt to fix build issue on r-forge
        * include/Rcpp/DataFrame.h: nrows() method